--- a/app.json
+++ b/app.json
@@ -1,20 +1,17 @@
 {
-  "name": "Anonymous Message App",
-  "description": "An Express app with PostgreSQL for anonymous messaging.",
-  "repository": "https://github.com/Sparks-th/anonymous-api/",
+  "name": "Anonymous API",
+  "description": "A simple anonymous messaging API",
+  "repository": "https://github.com/Sparks-th/anonymous-api",
+  "success_url": "/",
+  "stack": "container",
   "env": {
     "DATABASE_URL": {
-      "description": "External PostgreSQL connection URL (Render)",
+      "description": "PostgreSQL connection URL",
       "required": true
     },
     "PORT": {
-      "description": "Port to run the app",
+      "description": "Port for the server",
       "value": "5000"
     }
-  },
-  "buildpacks": [
-    {
-      "url": "heroku/nodejs"
-    }
-  ]
+  }
 }
